# anodet

./: .gitignore  .pylintrc  LICENSE  README.md  __init__.py  batch_0.pt  distance_calculation.py  distribution_fitting.py  feature_extraction.py  feature_extraction_example.ipynb  inference_debugging.ipynb  inference_example.ipynb  padim_utils.py  requirements.txt  score_calculation.py  setup.cfg  setup.py  test.py  testing.ipynb  train_example.ipynb  visualization.py
anodet/: __init__.py  duck.py  feature_extraction.py  padim.py  padim_script.py  patch_core.py  temp-test.py  test.py  utils.py  visualization.py
anodet/datasets/: dataset.py  mvtec_dataset.py
anodet/sampling_methods/: kcenter_greedy.py  sampling_def.py
anodet/visualization/: __init__.py  boundary.py  eval.py  frame.py  heatmap.py  highlight.py  utils.py
datasets/: mvtec.py
demo/: demo.py  demo2.py  mccp.py
deprecated/: Untitled.ipynb  feature_extraction_example.ipynb  inference_example.ipynb  train_example.ipynb
deprecated/.ipynb_checkpoints/: Untitled1-checkpoint.ipynb  feature_extraction_example-checkpoint.ipynb  padim_utils-checkpoint.py  (+2 more)
image_anomaly_detection/: __init__.py  distribution_fitting.py  feature_extraction.py  padim.py  padim_utils.py  patch_core.py  score_calculation.py  score_interpreter.py  test.py  utils.py  visualization.py
notebooks/: example.ipynb  inference_example.ipynb  padim_example.ipynb  padim_functions_example.ipynb  padim_script.py  patchcore_example.ipynb  tests.ipynb  tests_example.ipynb
src/: score_calculation.py
tests/: conftest.py  test_example.py
(+4 files in other folders)
