[metadata]
name = image_anomaly_detection
version = 0.0.1
author = Anton Eriksson
author_email = anton.emanuel@icloud.com
description = A set of functions for image anomaly detection
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/openaoi/padim_implementation/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = image_anomaly_detection
packages = find:
python_requires = >=3.6

[options.packages.find]
where = image_anomaly_detection

[pylint.TYPECHECK]
generated-members=torch.*,cv2.*
max-args=10
disable=
    C0114,
    C0115,
    C0116  # TODO: Remove when docstrings added

[mypy]
ignore_missing_imports = true
